[gd_scene load_steps=10 format=3 uid="uid://dwebgxp5t18w3"]

[ext_resource type="Script" uid="uid://3k1813ylgqki" path="res://scenes/objects/plants/corn.gd" id="1_hgaca"]
[ext_resource type="Texture2D" uid="uid://b04v3girxr0wd" path="res://Assets/game/Objects/Basic_Plants.png" id="1_hm4is"]
[ext_resource type="PackedScene" uid="uid://bvgyclv8akir0" path="res://scenes/components/hurt_component.tscn" id="2_aphyd"]
[ext_resource type="PackedScene" uid="uid://blqmlswav4pnv" path="res://scenes/objects/plants/watering_particlse.tscn" id="2_ofjf8"]
[ext_resource type="PackedScene" uid="uid://cfsxbh71vw646" path="res://scenes/objects/plants/flawering_particlse.tscn" id="3_ofjf8"]
[ext_resource type="PackedScene" uid="uid://qu7kc2w0jijd" path="res://scenes/objects/plants/growth_cycle_component.tscn" id="5_q3ekf"]
[ext_resource type="PackedScene" uid="uid://cscoy7wk240k" path="res://scenes/components/save_data_component.tscn" id="7_q3ekf"]
[ext_resource type="Resource" uid="uid://tb18ycxq5ajq" path="res://resource/scene_data_resource.tres" id="8_310os"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ucl7"]
size = Vector2(13.3438, 8)

[node name="Corn" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_hgaca")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_hm4is")
hframes = 6
vframes = 2
frame = 1

[node name="WateringParticlse" parent="." instance=ExtResource("2_ofjf8")]

[node name="FlaweringParticlse" parent="." instance=ExtResource("3_ofjf8")]

[node name="GrowthCycleComponent" parent="." instance=ExtResource("5_q3ekf")]

[node name="HurtComponent" parent="." instance=ExtResource("2_aphyd")]
position = Vector2(0, -4)
tool = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_5ucl7")

[node name="SaveDataComponent" parent="." instance=ExtResource("7_q3ekf")]
ffg = ExtResource("8_310os")
